STAR-310: adding endpoint to test vault
