# src/ska_oso_pht_services/openapi/pht-openapi-v1.yaml
@@ -27,13 +27,13 @@ paths:
                 type: string
   /proposals/{identifier}:
     parameters:
-      - name: identifier
-        in: path
-        required: true
-        style: simple
-        explode: false
-        schema:
-          type: string
+    - name: identifier
+      in: path
+      required: true
+      style: simple
+      explode: false
+      schema:
+        type: string
     get:
       summary: Get a proposal
       description: |
@@ -44,7 +44,7 @@ paths:
           description: OK
           content:
             application/json:
-              schema: 
+              schema:
                 $ref: './prsl-openapi-v1.yaml#/Proposal'
     put:
       summary: Edit a proposal
@@ -82,13 +82,13 @@ paths:
                 type: string
   /proposals/list/{identifier}:
     parameters:
-      - name: identifier
-        in: path
-        required: true
-        style: simple
-        explode: false
-        schema:
-          type: string
+    - name: identifier
+      in: path
+      required: true
+      style: simple
+      explode: false
+      schema:
+        type: string
     get:
       summary: Get a list of proposal
       description: |
@@ -99,11 +99,11 @@ paths:
           description: OK
           content:
             application/json:
-              schema: 
+              schema:
                 type: array
                 items:
                   anyOf:
-                    - $ref: './prsl-openapi-v1.yaml#/Proposal'
+                  - $ref: './prsl-openapi-v1.yaml#/Proposal'
   /upload/signedurl/{filename}:
     get:
       summary: Upload a pdf
@@ -111,13 +111,13 @@ paths:
         Upload a pdf
       operationId: ska_oso_pht_services.api.upload_pdf
       parameters:
-        - name: filename
-          in: path
-          required: true
-          style: simple
-          explode: false
-          schema:
-            type: string
+      - name: filename
+        in: path
+        required: true
+        style: simple
+        explode: false
+        schema:
+          type: string
       responses:
         "200":
           description: OK
@@ -144,13 +144,13 @@ paths:
         Download signed url
       operationId: ska_oso_pht_services.api.download_pdf
       parameters:
-        - name: filename
-          in: path
-          required: true
-          style: simple
-          explode: false
-          schema:
-            type: string
+      - name: filename
+        in: path
+        required: true
+        style: simple
+        explode: false
+        schema:
+          type: string
       responses:
         "200":
           description: OK
@@ -177,23 +177,48 @@ paths:
         get coordinates
       operationId: ska_oso_pht_services.api.get_systemcoordinates
       parameters:
-        - name: identifier
-          in: path
-          required: true
-          style: simple
-          explode: false
-          schema:
-            type: string
-        - name: reference_frame
-          in: path
-          required: true
-          style: simple
-          explode: false
-          schema:
-            type: string
+      - name: identifier
+        in: path
+        required: true
+        style: simple
+        explode: false
+        schema:
+          type: string
+      - name: reference_frame
+        in: path
+        required: true
+        style: simple
+        explode: false
+        schema:
+          type: string
       responses:
         "200":
           description: OK
+          content:
+            text/plain:
+              schema:
+                type: string
+  /testing/aws-s3-bucket-name:
+    get:
+      summary: get aws s3 bucket name
+      description: |
+        Download signed url
+      operationId: ska_oso_pht_services.api.get_aws_s3_bucket_name
+      responses:
+        "200":
+          description: OK
+          content:
+            text/plain:
+              schema:
+                type: string
+        "400":
+          description: BAD REQUEST
+          content:
+            text/plain:
+              schema:
+                type: string
+        "500":
+          description: INTERNAL SERVER ERROR
           content:
             text/plain:
               schema:
